--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -8,7 +8,7 @@ liberapay: # Replace with a single Liberapay username
 issuehunt: # Replace with a single IssueHunt username
 otechie: # Replace with a single Otechie username
 lfx_crowdfunding: # Replace with a single LFX Crowdfunding project-name e.g., cloud-foundry
-custom: https://github.com/sponsors/govindrkannan
+custom: "https://github.com/sponsors/govindrkannan"
 
 # These are supported funding model platforms
 
