--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,7 +1,7 @@
 github: [govindrkannan]
 patreon: govindrkannan
-ko_fi: # Replace with a single Ko-fi username
-liberapay: # Replace with a single Liberapay username
+ko_fi: govindrkannan
+liberapay: govindrkannan
 issuehunt: govindrkannan
 custom: ["https://github.com/sponsors/govindrkannan", github.com]
 
