--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -2,5 +2,4 @@ github: [govindrkannan]
 patreon: govindrkannan
 ko_fi: govindrkannan
 liberapay: govindrkannan
-issuehunt: govindrkannan
-custom: ["https://github.com/sponsors/govindrkannan", github.com]
+custom: ["https://gogetfunding.com/profile-followers-promotion", "https://www.crunchbase.com/person/govind-r" , "https://bit.ly/FollowGrkonTwitter" , "https://lnk.bio/govindrkannan" ]
